<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile"
    tools:openDrawer="start"
    android:id="@+id/drawer_layout">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightwhite"
        android:layout_gravity="start"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_menu"/>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/home_background"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="20dp">

        <ImageView
            android:id="@+id/menu_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_action_name"/>
    </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:background="#fece2f"
                    android:padding="20dp">

                    <com.facebook.shimmer.ShimmerFrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:id="@+id/profile_image_s">
                    <com.blogspot.atifsoftwares.circularimageview.CircularImageView
                        android:id="@+id/profile_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@mipmap/ic_corgi_foreground"/>
                    </com.facebook.shimmer.ShimmerFrameLayout>
                    <TextView
                        android:id="@+id/fullname_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/profile_image_s"
                        android:fontFamily="@font/bungee"
                        android:includeFontPadding="false"
                        android:text="Taimoor Sikander"
                        android:textColor="#000"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/username_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/fullname_field"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/profile_image_s"
                        android:includeFontPadding="false"
                        android:text="taimoor_sikander"
                        android:textSize="14sp" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="192dp"
                    android:layout_marginTop="-80dp"
                    android:padding="20dp">
                    <!--                    <com.google.android.material.card.MaterialCardView-->
                    <!--                        android:layout_height="125dp"-->
                    <!--                        android:layout_margin="10dp"-->
                    <!--                        android:layout_weight="1"-->
                    <!--                        android:layout_width="0dp"-->
                    <!--                        app:cardBackgroundColor="#fece2f"-->
                    <!--                        app:cardElevation="10dp">-->

                    <!--                        <RelativeLayout-->
                    <!--                            android:layout_height="match_parent"-->
                    <!--                            android:layout_width="match_parent"-->
                    <!--                            android:padding="5dp">-->

                    <!--                            <ImageView-->
                    <!--                                android:layout_centerHorizontal="true"-->
                    <!--                                android:layout_height="30dp"-->
                    <!--                                android:layout_width="30dp"-->
                    <!--                                android:src="@drawable/ic_close" />-->

                    <!--                            <TextView-->
                    <!--                                android:fontFamily="@font/bungee"-->
                    <!--                                android:id="@+id/payment_label"-->
                    <!--                                android:includeFontPadding="false"-->
                    <!--                                android:layout_centerInParent="true"-->
                    <!--                                android:layout_height="wrap_content"-->
                    <!--                                android:layout_width="wrap_content"-->
                    <!--                                android:text="$123"-->
                    <!--                                android:textSize="20sp" />-->

                    <!--                            <TextView-->
                    <!--                                android:id="@+id/payment_desc"-->
                    <!--                                android:includeFontPadding="false"-->
                    <!--                                android:layout_below="@id/payment_label"-->
                    <!--                                android:layout_centerHorizontal="true"-->
                    <!--                                android:layout_height="wrap_content"-->
                    <!--                                android:layout_width="wrap_content"-->
                    <!--                                android:text="Balance"-->
                    <!--                                android:textSize="20sp" />-->

                    <!--                        </RelativeLayout>-->

                    <!--                    </com.google.android.material.card.MaterialCardView>-->
                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="0dp"
                        android:layout_height="125dp"
                        android:layout_margin="22dp"
                        android:layout_weight="1"
                        app:cardBackgroundColor="#fece2f"
                        app:cardElevation="10dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="15dp">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_centerHorizontal="true"
                                android:src="@drawable/ic_pet" />

                            <TextView
                                android:id="@+id/payment_label1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:fontFamily="@font/bungee"
                                android:includeFontPadding="false"
                                android:text="PETS"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/payment_desc1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/payment_label1"
                                android:layout_centerHorizontal="true"
                                android:includeFontPadding="false"
                                android:text="View Your Pets"
                                android:textSize="20sp" />

                        </RelativeLayout>

                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:hint="@string/u_id"
                        android:id="@+id/userid_profile"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:drawableLeft="@drawable/ic_pet"
                            android:drawablePadding="10dp"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:textStyle="bold"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:hint="@string/username"
                        android:id="@+id/full_name_profile"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:drawableLeft="@drawable/ic_username_small_icon"
                            android:drawablePadding="10dp"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:hint="@string/email"
                        android:id="@+id/email_profile"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:drawableLeft="@drawable/ic_mail_smaill_icon"
                            android:drawablePadding="10dp"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:hint="@string/password"
                        android:id="@+id/password_profile"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:drawableLeft="@drawable/ic_lock"
                            android:drawablePadding="10dp"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/updateProfile"
                        android:background="#fece2f"
                        android:fontFamily="@font/bungee"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_width="match_parent"
                        android:text="@string/update"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>

